更新封禁列表

--- a/banned_user.cfg
+++ b/banned_user.cfg
@@ -46,3 +46,8 @@ banid 0 STEAM_0:1:446562806
 banid 0 STEAM_0:1:519244080
 banid 0 STEAM_0:0:533691935
 banid 0 STEAM_1:0:229745256
+banid 0 STEAM_1:1:244569982
+banid 0 STEAM_1:0:526776314
+banid 0 STEAM_1:1:647500033
+banid 0 STEAM_1:0:741411139
+banid 0 STEAM_1:0:617873680
